Fix action form alignment

--- a/dev/styles/partials/_actionForm.scss
+++ b/dev/styles/partials/_actionForm.scss
@@ -9,8 +9,8 @@
         width: 100%;
         border: 1px solid rgb(207, 207, 207);
         border-radius: 5px;
-        margin: $base-spacing 0;
-        padding: $base-spacing-rem/2 $base-spacing-rem/1.5;
+        margin: $base-spacing 0 0 0;
+        padding: $base-spacing-rem/2.2 $base-spacing-rem/1.5;
     }
 
     @media (max-width: 480px) {
